--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,8 @@ jobs:
             '!examples/owin/**',
             '!*/OpenTelemetry.Instrumentation.Process*/**',
             '!examples/process-instrumentation/**',
+            '!*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**',
+            '!examples/redis/**',
             '!*/OpenTelemetry.Instrumentation.Wcf*/**',
             '!examples/wcf/**',
             '!**.md'
@@ -51,17 +53,6 @@ jobs:
     needs: detect-changes
     if: contains(needs.detect-changes.outputs.changes, 'code')
     uses: ./.github/workflows/dotnet-format.yml
-
-  build-test-solution:
-    needs: detect-changes
-    if: |
-      contains(needs.detect-changes.outputs.changes, 'solution')
-      || contains(needs.detect-changes.outputs.changes, 'shared')
-    # || contains(needs.detect-changes.outputs.changes, 'build')
-
-    runs-on: windows-latest
-    steps:
-    - run: echo testing
 
   build-test-geneva:
     needs: detect-changes
@@ -139,20 +130,84 @@ jobs:
       project-name: OpenTelemetry.Instrumentation.Wcf
       code-cov-name: Instrumentation.Wcf
 
+  build-test-solution:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'solution')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+
+    strategy:
+      fail-fast: false # ensures the entire test matrix is run, even if one permutation fails
+      matrix:
+        os: [ windows-latest, ubuntu-latest ]
+        version: [ net462, net6.0, net7.0 ]
+        exclude:
+        - os: ubuntu-latest
+          version: net462
+
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v3
+
+    - name: Restore
+      run: dotnet restore
+
+    - name: Build
+      run: dotnet build --configuration Release --no-restore
+
+    - name: Test ${{ matrix.version }}
+      shell: pwsh
+      run: |
+        $projects = Get-ChildItem `
+          -Path test/*.Tests/*.csproj `
+          -Exclude `
+            OpenTelemetry.Exporter.Geneva.Tests.csproj,
+            OpenTelemetry.Exporter.OneCollector.Tests.csproj,
+            OpenTelemetry.Instrumentation.Owin.Tests.csproj,
+            OpenTelemetry.Instrumentation.Process.Tests.csproj,
+            OpenTelemetry.Instrumentation.StackExchangeRedis.Tests.csproj,
+            OpenTelemetry.Instrumentation.Wcf.Tests.csproj
+
+        ForEach ($project in $projects)
+        {
+          dotnet test $project.FullName --collect:"Code Coverage" --results-directory:"TestResults" --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
+        }
+
+    - name: Install coverage tool
+      run: dotnet tool install -g dotnet-coverage
+
+    - name: Merging test results
+      run: dotnet-coverage merge -r -f cobertura -o ./TestResults/Cobertura.xml ./TestResults/*.coverage
+
+    - uses: codecov/codecov-action@v3.1.4
+      continue-on-error: true # Note: Don't fail for upload failures
+      env:
+        OS: ${{ matrix.os }}
+        TFM: ${{ matrix.version }}
+      with:
+        file: TestResults/Cobertura.xml
+        env_vars: OS,TFM
+        flags: unittests-Solution
+        name: Code Coverage for solution on [${{ matrix.os }}.${{ matrix.version }}]
+
   build-test:
     needs: [
       lint-misspell-sanitycheck,
       detect-changes,
       lint-md,
       lint-dotnet-format,
-      build-test-solution,
       build-test-geneva,
       build-test-onecollector,
       build-test-owin,
       build-test-process,
       build-test-redis,
       build-test-redis-integration,
-      build-test-wcf
+      build-test-wcf,
+      build-test-solution
       ]
     if: always() && !cancelled() && !contains(needs.*.result, 'failure')
     runs-on: windows-latest
