[repo] CI improvements (#1383)

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,13 +1,10 @@
-name: Integration Tests
+name: Integration Build OpenTelemetry.Instrumentation.StackExchangeRedis
 
 on:
-  pull_request:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
-    paths-ignore:
-    - '**.md'
+  workflow_call:
 
 jobs:
-  redis-test:
+  redis-integration-test:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
