--- a/.github/workflows/markdownlint.yml
+++ b/.github/workflows/markdownlint.yml
@@ -1,13 +1,10 @@
-name: markdownlint
+name: Lint - Markdown
 
 on:
-  pull_request:
-    branches: [ 'main*', 'instrumentation*', 'exporter*', 'extensions*' ]
-    paths:
-    - '**.md'
+  workflow_call:
 
 jobs:
-  build:
+  run-markdownlint:
     runs-on: ubuntu-latest
 
     steps:
