Switch to paths-filter fork which supports negative matching.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     outputs:
       changes: ${{ steps.changes.outputs.changes }}
     steps:
-    - uses: dorny/paths-filter@v2
+    - uses: AurorNZ/paths-filter@v3
       id: changes
       with:
         filters: |
