Testing editorconfig filter.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,4 @@
+#test
 # To learn more about .editorconfig see https://aka.ms/editorconfigdocs
 ###############################
 # Core EditorConfig Options   #
