[repo] CI improvement tweaks (#1384)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,20 +13,20 @@ jobs:
     outputs:
       changes: ${{ steps.changes.outputs.changes }}
     steps:
-    - uses: dorny/paths-filter@v2
+    - uses: AurorNZ/paths-filter@v3
       id: changes
       with:
         filters: |
           md: [ '**.md' ]
-          build: ['build/**']
+          build: ['build/**', '.github/**/*.yml', '!.github/workflows/package-*']
           shared: ['src/Shared/**']
           code: ['**.cs', '.editorconfig']
-          geneva: ['*/OpenTelemetry.Exporter.Geneva*/**', '!**.md']
-          onecollector: ['*/OpenTelemetry.Instrumentation.OneCollector*/**', '!**.md']
-          owin: ['*/OpenTelemetry.Instrumentation.Owin*/**', 'examples/owin/**', '!**.md']
-          process: ['*/OpenTelemetry.Instrumentation.Process*/**', 'examples/process-instrumentation/**', '!**.md']
-          redis: ['*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**', 'examples/redis/**', '!**.md']
-          wcf: ['*/OpenTelemetry.Instrumentation.Wcf*/**', 'examples/wcf/**', '!**.md']
+          geneva: ['*/OpenTelemetry.Exporter.Geneva*/**', '!**/*.md']
+          onecollector: ['*/OpenTelemetry.Instrumentation.OneCollector*/**', '!**/*.md']
+          owin: ['*/OpenTelemetry.Instrumentation.Owin*/**', 'examples/owin/**', '!**/*.md']
+          process: ['*/OpenTelemetry.Instrumentation.Process*/**', 'examples/process-instrumentation/**', '!**/*.md']
+          redis: ['*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**', 'examples/redis/**', '!**/*.md']
+          wcf: ['*/OpenTelemetry.Instrumentation.Wcf*/**', 'examples/wcf/**', '!**/*.md']
           solution: [
             'src/**',
             'test/**',
@@ -41,7 +41,7 @@ jobs:
             '!examples/redis/**',
             '!*/OpenTelemetry.Instrumentation.Wcf*/**',
             '!examples/wcf/**',
-            '!**.md'
+            '!**/*.md'
             ]
 
   lint-md:
