Fix a bug in the package workflow causing github release tagging issues.

--- a/.github/workflows/Component.Package.yml
+++ b/.github/workflows/Component.Package.yml
@@ -78,7 +78,7 @@ jobs:
 
         $releaseName = '${{ inputs.release-name || inputs.project-name }}'
 
-        if ($firstPackageVersion -contains '-alpha' -or $firstPackageVersion -contains '-beta' -or $firstPackageVersion -contains '-rc')
+        if ($firstPackageVersion -match '-alpha' -or $firstPackageVersion -match '-beta' -or $firstPackageVersion -match '-rc')
         {
           gh release create ${{ github.ref_name }} `
             --title "$releaseName v$firstPackageVersion" `
