Add dedicated CI for OpenTelemetry.Extensions.

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -47,6 +47,11 @@ flags:
     paths:
       - src/OpenTelemetry.Exporter.OneCollector
 
+  unittests-Extensions:
+    carryforward: true
+    paths:
+      - src/OpenTelemetry.Extensions
+
   unittests-Instrumentation.AspNet:
     carryforward: true
     paths:
