--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
           build: ['build/**', '.github/**/*.yml', '!.github/workflows/package-*']
           shared: ['src/Shared/**']
           code: ['**.cs', '.editorconfig']
+          aottestapp: ['test/OpenTelemetry.AotCompatibility.TestApp/**']
           aspnet: ['*/OpenTelemetry.Instrumentation.AspNet*/**', 'examples/AspNet/**', '!**/*.md']
+          eventcounters: ['*/OpenTelemetry.Instrumentation.EventCounters*/**', 'examples/event-counters/**', '!**/*.md']
           extensions: ['*/OpenTelemetry.Extensions*/**', '!**/*.md']
           geneva: ['*/OpenTelemetry.Exporter.Geneva*/**', '!**/*.md']
           onecollector: ['*/OpenTelemetry.Instrumentation.OneCollector*/**', '!**/*.md']
@@ -29,13 +31,17 @@ jobs:
           persistentstorage: ['*/OpenTelemetry.PersistentStorage*/**', '!**/*.md']
           process: ['*/OpenTelemetry.Instrumentation.Process*/**', 'examples/process-instrumentation/**', '!**/*.md']
           redis: ['*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**', 'examples/redis/**', '!**/*.md']
+          runtime: ['*/OpenTelemetry.Instrumentation.Runtime*/**', 'examples/runtime-instrumentation/**', '!**/*.md']
           wcf: ['*/OpenTelemetry.Instrumentation.Wcf*/**', 'examples/wcf/**', '!**/*.md']
           solution: [
             'src/**',
             'test/**',
             'examples/**',
+            '!test/OpenTelemetry.AotCompatibility.TestApp/**',
             '!*/OpenTelemetry.Instrumentation.AspNet*/**',
             '!examples/AspNet/**',
+            '!*/OpenTelemetry.Instrumentation.EventCounters*/**',
+            '!examples/event-counters/**',
             '!*/OpenTelemetry.Extensions*/**',
             '!*/OpenTelemetry.Exporter.Geneva*/**',
             '!*/OpenTelemetry.Exporter.OneCollector*/**',
@@ -46,6 +52,8 @@ jobs:
             '!examples/process-instrumentation/**',
             '!*/OpenTelemetry.Instrumentation.StackExchangeRedis*/**',
             '!examples/redis/**',
+            '!*/OpenTelemetry.Instrumentation.Runtime*/**',
+            '!examples/runtime-instrumentation/**',
             '!*/OpenTelemetry.Instrumentation.Wcf*/**',
             '!examples/wcf/**',
             '!**/*.md'
@@ -73,6 +81,18 @@ jobs:
       code-cov-name: Instrumentation.AspNet
       os-list: '[ "windows-latest" ]'
       tfm-list: '[ "net462" ]'
+
+  build-test-eventcounters:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'eventcounters')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+    uses: ./.github/workflows/Component.BuildTest.yml
+    with:
+      project-name: OpenTelemetry.Instrumentation.EventCounters
+      code-cov-name: Instrumentation.EventCounters
+      tfm-list: '[ "net6.0", "net7.0" ]'
 
   build-test-extensions:
     needs: detect-changes
@@ -161,6 +181,17 @@ jobs:
       || contains(needs.detect-changes.outputs.changes, 'shared')
     uses: ./.github/workflows/integration.yml
 
+  build-test-runtime:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'runtime')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+    uses: ./.github/workflows/Component.BuildTest.yml
+    with:
+      project-name: OpenTelemetry.Instrumentation.Runtime
+      code-cov-name: Instrumentation.Runtime
+
   build-test-wcf:
     needs: detect-changes
     if: |
@@ -195,13 +226,7 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v3
 
-    - name: Restore
-      run: dotnet restore
-
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-
-    - name: Test ${{ matrix.version }}
+    - name: Restore, Build, & Test ${{ matrix.version }}
       shell: pwsh
       run: |
         $projects = Get-ChildItem `
@@ -212,8 +237,10 @@ jobs:
             OpenTelemetry.Extensions.Tests.csproj,
             OpenTelemetry.Instrumentation.AspNet.Tests.csproj,
             OpenTelemetry.Instrumentation.AspNet.TelemetryHttpModule.Tests.csproj,
+            OpenTelemetry.Instrumentation.EventCounters.Tests.csproj,
             OpenTelemetry.Instrumentation.Owin.Tests.csproj,
             OpenTelemetry.Instrumentation.Process.Tests.csproj,
+            OpenTelemetry.Instrumentation.Runtime.Tests.csproj,
             OpenTelemetry.Instrumentation.StackExchangeRedis.Tests.csproj,
             OpenTelemetry.Instrumentation.Wcf.Tests.csproj,
             OpenTelemetry.PersistentStorage.Abstractions.csproj,
@@ -221,7 +248,7 @@ jobs:
 
         ForEach ($project in $projects)
         {
-          dotnet test $project.FullName --collect:"Code Coverage" --results-directory:"TestResults" --framework ${{ matrix.version }} --configuration Release --no-restore --no-build --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
+          dotnet test $project.FullName --collect:"Code Coverage" --results-directory:"TestResults" --framework ${{ matrix.version }} --configuration Release --logger:"console;verbosity=detailed" -- RunConfiguration.DisableAppDomain=true
         }
 
     - name: Install coverage tool
@@ -241,6 +268,16 @@ jobs:
         flags: unittests-Solution
         name: Code Coverage for solution on [${{ matrix.os }}.${{ matrix.version }}]
 
+  verify-aot-compat:
+    needs: detect-changes
+    if: |
+      contains(needs.detect-changes.outputs.changes, 'eventcounters')
+      || contains(needs.detect-changes.outputs.changes, 'runtime')
+      || contains(needs.detect-changes.outputs.changes, 'aottestapp')
+      || contains(needs.detect-changes.outputs.changes, 'build')
+      || contains(needs.detect-changes.outputs.changes, 'shared')
+    uses: ./.github/workflows/verifyaotcompat.yml
+
   build-test:
     needs: [
       lint-misspell-sanitycheck,
@@ -248,6 +285,7 @@ jobs:
       lint-md,
       lint-dotnet-format,
       build-test-aspnet,
+      build-test-eventcounters,
       build-test-extensions,
       build-test-geneva,
       build-test-onecollector,
@@ -256,8 +294,10 @@ jobs:
       build-test-process,
       build-test-redis,
       build-test-redis-integration,
+      build-test-runtime,
       build-test-wcf,
-      build-test-solution
+      build-test-solution,
+      verify-aot-compat
       ]
     if: always() && !cancelled() && !contains(needs.*.result, 'failure')
     runs-on: windows-latest
