--- a/src/OpenTelemetry.ResourceDetectors.Azure/OpenTelemetry.ResourceDetectors.Azure.csproj
+++ b/src/OpenTelemetry.ResourceDetectors.Azure/OpenTelemetry.ResourceDetectors.Azure.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFrameworks>net6.0;netstandard2.0</TargetFrameworks>
         <Description>OpenTelemetry Resource Detectors for Azure cloud environments</Description>
         <PackageTags>$(PackageTags);ResourceDetector</PackageTags>
         <MinVerTagPrefix>ResourceDetectors.Azure-</MinVerTagPrefix>
